# TravLang

./: .depend  .gitattributes  .gitignore  .gitmodules  .mailmap  BOOTSTRAP.adoc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changes  HACKING.adoc  INSTALL.adoc  LICENSE  Makefile  Makefile.best_binaries  Makefile.build_config.in  Makefile.common  Makefile.config.in  Makefile.config_if_required  Makefile.dev  Makefile.menhir  README.adoc  README.win32.adoc  VERSION  aclocal.m4  appveyor.yml  configure  configure.ac  dune  dune-project  travlang-variants.opam
api_docgen/: Compiler_libs.pre.mld  Format_tutorial.mld  Makefile  Makefile.common  Makefile.docfiles  alldoc.tex
asmcomp/: CSE.mli  CSEgen.ml  CSEgen.mli  afl_instrument.ml  afl_instrument.mli  asmgen.ml  asmgen.mli  asmlibrarian.ml  asmlibrarian.mli  asmlink.ml  asmlink.mli  asmpackager.ml  asmpackager.mli  branch_relaxation.ml  branch_relaxation.mli  branch_relaxation_intf.mli  cmm.ml  cmm.mli  cmm_helpers.ml  cmm_helpers.mli  cmm_invariants.ml  cmm_invariants.mli  cmmgen.ml  cmmgen.mli  cmmgen_state.ml  cmmgen_state.mli  coloring.ml  coloring.mli  comballoc.ml  comballoc.mli  dataflow.ml  dataflow.mli  deadcode.ml  deadcode.mli  dune  emit.mli  emitaux.ml  emitaux.mli  emitenv.mli  interf.ml  (+53 more)
boot/: travlangc  travlanglex
build-aux/: ax_func_which_gethostbyname_r.m4  travlang_version.m4
bytecomp/: bytegen.ml  bytegen.mli  bytelibrarian.ml  bytelibrarian.mli  bytelink.ml  bytelink.mli  bytepackager.ml  bytepackager.mli  bytesections.ml  bytesections.mli  dll.ml  dll.mli  dune  emitcode.ml  emitcode.mli  instruct.ml  instruct.mli  meta.ml  meta.mli  printinstr.ml  printinstr.mli  symtable.ml  symtable.mli
compilerlibs/: META.in
debugger/: breakpoints.ml  breakpoints.mli  checkpoints.ml  checkpoints.mli  command_line.ml  command_line.mli  debugcom.ml  debugcom.mli  debugger_config.ml  debugger_config.mli  debugger_lexer.mli  debugger_lexer.mll  debugger_parser.mly  dune  eval.ml  eval.mli  events.ml  events.mli  exec.ml  exec.mli  frames.ml  frames.mli  history.ml  history.mli  input_handling.ml  input_handling.mli  int64ops.ml  int64ops.mli  loadprinter.ml  loadprinter.mli  main.ml  main.mli  parameters.ml  parameters.mli  parser_aux.mli  pos.ml  pos.mli  primitives.ml  primitives.mli  printval.ml  (+23 more)
driver/: compenv.ml  compenv.mli  compile.ml  compile.mli  compile_common.ml  compile_common.mli  compmisc.ml  compmisc.mli  errors.ml  errors.mli  main.mli  main_args.ml  main_args.mli  maindriver.ml  makedepend.ml  makedepend.mli  optcompile.ml  optcompile.mli  opterrors.mli  optmain.mli  optmaindriver.ml  optmaindriver.mli  pparse.ml  pparse.mli
file_formats/: cmi_format.ml  cmi_format.mli  cmo_format.mli  cmt_format.ml  cmt_format.mli  cmx_format.mli  cmxs_format.mli  linear_format.ml  linear_format.mli
lambda/: debuginfo.ml  debuginfo.mli  dune  generate_runtimedef.sh  lambda.ml  lambda.mli  matching.ml  matching.mli  printlambda.ml  printlambda.mli  runtimedef.mli  simplif.ml  simplif.mli  switch.ml  switch.mli  tmc.ml  tmc.mli  translattribute.ml  translattribute.mli  translclass.ml  translclass.mli  translcore.ml  translcore.mli  translmod.ml  translmod.mli  translobj.ml  translobj.mli  translprim.ml  translprim.mli  value_rec_compiler.ml  value_rec_compiler.mli
lex/: common.ml  common.mli  compact.ml  compact.mli  cset.ml  cset.mli  lexer.mli  lexer.mll  lexgen.ml  lexgen.mli  main.ml  main.mli  output.ml  output.mli  outputbis.ml  outputbis.mli  parser.mly  syntax.ml  syntax.mli  table.ml  table.mli
man/: Makefile  travlang.1  travlangc.1  travlangc.opt.1  travlangcp.1  travlangdebug.1  travlangdep.1  travlangdoc.1  travlanglex.1  travlangmktop.1  travlangopt.1  travlangopt.opt.1  travlangoptp.1  travlangprof.1  travlangrun.1  travlangyacc.1
manual/: LICENSE-for-the-manual  Makefile  README.md
middle_end/: backend_intf.mli  backend_var.ml  backend_var.mli  clambda.ml  clambda.mli  clambda_primitives.ml  clambda_primitives.mli  compilation_unit.ml  compilation_unit.mli  compilenv.ml  compilenv.mli  convert_primitives.ml  convert_primitives.mli  internal_variable_names.ml  internal_variable_names.mli  linkage_name.ml  linkage_name.mli  printclambda.ml  printclambda.mli  printclambda_primitives.ml  printclambda_primitives.mli  semantics_of_primitives.ml  semantics_of_primitives.mli  symbol.ml  symbol.mli  variable.ml  variable.mli
ocamldoc/: Changes.txt  META.in  dune  odoc.ml  odoc.mli  odoc_analyse.ml  odoc_analyse.mli  odoc_args.ml  odoc_args.mli  odoc_ast.ml  odoc_ast.mli  odoc_class.ml  odoc_class.mli  odoc_comments.ml  odoc_comments.mli  odoc_comments_global.ml  odoc_comments_global.mli  odoc_config.ml  odoc_config.mli  odoc_cross.ml  odoc_cross.mli  odoc_dag2html.ml  odoc_dag2html.mli  odoc_dep.ml  odoc_dep.mli  odoc_dot.ml  odoc_dot.mli  odoc_env.ml  odoc_env.mli  odoc_exception.ml  odoc_exception.mli  odoc_extension.ml  odoc_extension.mli  odoc_gen.ml  odoc_gen.mli  odoc_global.ml  odoc_global.mli  odoc_html.ml  odoc_html.mli  odoc_index.html  (+56 more)
ocamltest/: OCAMLTEST.org  README.md  actions.ml  actions.mli  actions_helpers.ml  actions_helpers.mli  builtin_actions.ml  builtin_actions.mli  builtin_variables.ml  builtin_variables.mli  dune  environments.ml  environments.mli  filecompare.ml  filecompare.mli  main.ml  main.mli  modifier_parser.ml  modifier_parser.mli  options.ml  options.mli  result.ml  result.mli  run.h  run_command.ml  run_command.mli  run_common.h  run_stubs.c  run_unix.c  run_win32.c  strace.ml  strace.mli  tests.ml  tests.mli  translate.ml  translate.mli  travlang_actions.ml  travlang_actions.mli  travlang_backends.ml  travlang_backends.mli  (+38 more)
otherlibs/: Makefile  Makefile.otherlibs.common
parsing/: HACKING.adoc  ast_helper.ml  ast_helper.mli  ast_invariants.ml  ast_invariants.mli  ast_iterator.ml  ast_iterator.mli  ast_mapper.ml  ast_mapper.mli  asttypes.mli  attr_helper.ml  attr_helper.mli  builtin_attributes.ml  builtin_attributes.mli  depend.ml  depend.mli  docstrings.ml  docstrings.mli  dune  lexer.mli  lexer.mll  location.ml  location.mli  longident.ml  longident.mli  parse.ml  (+11 more)
(+1783 files in other folders)
