opam-version: "2.0"
version: "5.3.0+trunk"
license: "LGPL-2.1-or-later WITH travlang-LGPL-linking-exception"
synopsis: "travlang development version"
maintainer: "caml-list@inria.fr"
authors: [
  "Xavier Leroy"
  "Damien Doligez"
  "Alain Frisch"
  "Jacques Garrigue"
  "Didier Rémy"
  "Jérôme Vouillon"
]
homepage: "https://github.com/travlang/travlang/"
bug-reports: "https://github.com/travlang/travlang/issues"
depends: [
  "travlang" {= "5.3.0" & post}
  "base-unix" {post}
  "base-bigarray" {post}
  "base-threads" {post}
  "base-domains" {post}
  "base-nnp" {post}
  "travlang-option-bytecode-only" {arch != "arm64" & arch != "x86_64" & arch != "s390x" & arch != "riscv64" & arch != "ppc64"}
]
conflict-class: "travlang-core-compiler"
flags: compiler
build-env: [
  [LSAN_OPTIONS = "detect_leaks=0,exitcode=0"]
  [ASAN_OPTIONS = "detect_leaks=0,exitcode=0"]
]
build: [
  [
    "./configure"
    "--prefix=%{prefix}%"
    "--docdir=%{doc}%/travlang"
    "-C"
    "--with-afl" {travlang-option-afl:installed}
    "--disable-native-compiler" {travlang-option-bytecode-only:installed}
    "--disable-flat-float-array" {travlang-option-no-flat-float-array:installed}
    "--enable-flambda" {travlang-option-flambda:installed}
    "--enable-frame-pointers" {travlang-option-fp:installed}
    "--enable-tsan" {travlang-option-tsan:installed}
    "CC=cc" {!travlang-option-32bit:installed & !travlang-option-musl:installed & (os="openbsd"|os="macos")}
    "CC=musl-gcc" {travlang-option-musl:installed & os-distribution!="alpine"}
    "CFLAGS=-Os" {travlang-option-musl:installed}
    "LDFLAGS=-Wl,--no-as-needed,-ldl" {travlang-option-leak-sanitizer:installed | (travlang-option-address-sanitizer:installed & os!="macos")}
    "CC=gcc -ldl -fsanitize=leak -fno-omit-frame-pointer -O1 -g" {travlang-option-leak-sanitizer:installed}
    "CC=gcc -ldl -fsanitize=address -fno-omit-frame-pointer -O1 -g" {travlang-option-address-sanitizer:installed & os!="macos"}
    "CC=clang -fsanitize=address -fno-omit-frame-pointer -O1 -g" {travlang-option-address-sanitizer:installed & os="macos"}
    "CC=gcc -m32" {travlang-option-32bit:installed & os="linux"}
    "CC=gcc -Wl,-read_only_relocs,suppress -arch i386 -m32" {travlang-option-32bit:installed & os="macos"}
    "ASPP=musl-gcc -c" {travlang-option-musl:installed & os-distribution!="alpine"}
    "--host=i386-linux" {travlang-option-32bit:installed & os="linux"}
    "--host=i386-apple-darwin13.2.0" {travlang-option-32bit:installed & os="macos"}
    "LIBS=-static" {travlang-option-static:installed}
    "--disable-warn-error"
  ]
  [make "-j%{jobs}%"]
]
install: [make "install"]
depopts: [
  "travlang-option-32bit"
  "travlang-option-afl"
  "travlang-option-bytecode-only"
  "travlang-option-no-flat-float-array"
  "travlang-option-flambda"
  "travlang-option-fp"
  "travlang-option-musl"
  "travlang-option-leak-sanitizer"
  "travlang-option-address-sanitizer"
  "travlang-option-static"
  "travlang-option-tsan"
]
