;**************************************************************************
;*                                                                        *
;*                                 travlang                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

; mshinwell: Disabled for now -- otherlibs/dynlink/dune needs fixing first.

;(travlanglex lexer)
;(travlangyacc parser)
;
;(executable
; (name main)
; (modes byte)
; (flags (:standard -w -9))
; (modules_without_implementation parser_aux)
; (libraries travlangcommon travlangtoplevel runtime stdlib unix))
;
;(rule (copy main.exe travlangdebug.byte))
