;**************************************************************************
;*                                                                        *
;*                                 travlang                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(travlanglex
 (modules tsl_lexer)
 (mode fallback))

(travlangyacc
 (modules tsl_parser)
 (mode fallback))

;; FIXME: handle UNIX_OR_WIN32 or something similar
(library
 (name travlangtest_core_and_plugin)
 (modes byte)
 (wrapped false)
 (flags (:standard -nostdlib))
 (libraries travlangcommon stdlib unix)
 (modules (:standard \ options main travlangtest_unix_dummy travlangtest_unix_real))
 (c_flags (-DCAML_INTERNALS -I%{project_root}/runtime)) ; fixme
 (c_names run_unix run_stubs))

(rule
 (targets empty.ml)
 (deps (source_tree %{project_root}/runtime/caml))
 (action (write-file %{targets} "(* hack *)")))

(executable
 (name main)
 (modes byte)
 (flags (:standard -nostdlib))
 (modules options main)
 (libraries travlangtest_core_and_plugin runtime stdlib))

(rule (copy main.exe travlangtest.byte))
